--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+     <div id="header">
+        <div class="container">
+            <nav>
+                <img src="logo.jpg"  class="logo">
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                       <li><a href="#services">Service</a></li>
+                    <li><a href="#Portfolio">Portfolio</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                    <i class="fas fa-times" onclick ="closemenu()"></i>
+                </ul>
+                <i class="fas fa-bars" onclick ="openmenu()"></i>
+             </nav>
+            <div class="header-text">
+            <p>Developer and UI/UX Designer</p>
+            <h1>Hi, I'm <span>Forlan Nzokou</span><br>from Cameroon</h1>
+        </div>
+     </div>
+     </div>
 </body>
 </html>
