--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
         </div>
      </div>
      </div>
+      <div class="copyright">
+                    <p>copyright Forlan. Made with <i class="fa-solid fa-heart"></i>by Easy tutorials</p>
+                </div>
 </body>
 </html>
