--- a/index.html
+++ b/index.html
@@ -7,26 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <div id="header">
+  <div id="Portfolio">
         <div class="container">
-            <nav>
-                <img src="logo.jpg"  class="logo">
-                <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#About">About</a></li>
-                       <li><a href="#services">Service</a></li>
-                    <li><a href="#Portfolio">Portfolio</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                    <i class="fas fa-times" onclick ="closemenu()"></i>
-                </ul>
-                <i class="fas fa-bars" onclick ="openmenu()"></i>
-             </nav>
-            <div class="header-text">
-            <p>Developer and UI/UX Designer</p>
-            <h1>Hi, I'm <span>Forlan Nzokou</span><br>from Cameroon</h1>
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="Images/work-1.png">
+                    <div class="layer">
+               <h3>Cosmetic sale website</h3>
+               <p>The website gives a clear appercu of different product provided by vitera.</p>   
+                <a href="https://vitera-tan.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>                     
+                    </div>
+                </div>
+                  <div class="work">
+                    <img src="Images/work-2.png">
+                     <div class="layer">
+               <h3>Music App</h3>
+               <p>The app connects you to the talented people around the world.
+                Download it from play store.</p>   
+                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>                     
+                    </div>
+                </div>
+                  <div class="work">
+                    <img src="Images/work-3.png">
+                     <div class="layer">
+               <h3>Online Shopping App</h3>
+               <p>The app connects you to the talented people around the world.
+                Download it from play store.</p>   
+                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>                     
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See more</a>
         </div>
-     </div>
-     </div>
+    </div>
       <div class="copyright">
                     <p>copyright Forlan. Made with <i class="fa-solid fa-heart"></i>by Easy tutorials</p>
                 </div>
