--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gallery-section</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="Images/work-1.png">
+                    <img src="work-1.png">
                     <div class="layer">
                <h3>Cosmetic sale website</h3>
                <p>The website gives a clear appercu of different product provided by vitera.</p>   
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                   <div class="work">
-                    <img src="Images/work-2.png">
+                    <img src="work-2.png">
                      <div class="layer">
                <h3>Music App</h3>
                <p>The app connects you to the talented people around the world.
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                   <div class="work">
-                    <img src="Images/work-3.png">
+                    <img src="work-3.png">
                      <div class="layer">
                <h3>Online Shopping App</h3>
                <p>The app connects you to the talented people around the world.
